Update iter to 60000

--- a/configs/gaitbase/gaitbase_da_casiab.yaml
+++ b/configs/gaitbase/gaitbase_da_casiab.yaml
@@ -19,6 +19,7 @@ evaluator_cfg:
   metric: euc # cos
   transform:
     - type: BaseSilCuttingTransform
+      cutting: 0
 
 loss_cfg:
   - loss_term_weight: 1.0
@@ -101,6 +102,7 @@ trainer_cfg:
     - type: Compose
       trf_cfg:
         - type: BaseSilCuttingTransform
+          cutting: 0
         - type: RandomRotate
           prob: 0.3
         - type: RandomErasing
