Add AttentionLSTM model and configuration for gait recognition

--- a/configs/attentionlstm/attentionlstm.yaml
+++ b/configs/attentionlstm/attentionlstm.yaml
@@ -35,7 +35,7 @@ loss_cfg:
     log_accuracy: true
 
 model_cfg:
-  model: ConvLSTM
+  model: AttentionLSTM
   backbone_cfg:
     type: ResNet9
     block: BasicBlock
